--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@ header h1 {
       <div class="overlay"></div>
       <div class="box-content">
         <img src="frame.png" alt="Frame" />
-        <h2>Contacts</h2>
+        <h2>Excel</h2>
       </div>
     </div>
   </section>  <script>
