--- a/index.html
+++ b/index.html
@@ -7,11 +7,11 @@
   <link href="https://fonts.googleapis.com/css2?family=Antonio:wght@700&display=swap" rel="stylesheet">
   <style>
     :root {
-      --platinum: #e5e4e2;
+      --black: #000;
     }body {
   margin: 0;
-  background-color: #000;
-  color: var(--platinum);
+  background-color: #e5e4e2;
+  color: var(--black);
   font-family: 'Antonio', sans-serif;
   display: flex;
   flex-direction: column;
@@ -37,7 +37,7 @@ header h1 {
 .download-box {
   margin-top: 20px;
   padding: 15px 30px;
-  border: 2px solid var(--platinum);
+  border: 2px solid var(--black);
   text-align: center;
   cursor: pointer;
   position: relative;
@@ -51,7 +51,7 @@ header h1 {
   left: -100%;
   width: 100%;
   height: 100%;
-  background: rgba(229, 228, 226, 0.1);
+  background: #c0bfbd;
   animation: shine 2s linear infinite;
 }
 
@@ -74,14 +74,14 @@ header h1 {
   width: 300px;
   height: 200px;
   border: none;
-  background: #111;
+  background: #c0bfbd;
   cursor: pointer;
   overflow: hidden;
   transition: transform 0.3s ease;
 }
 
 .box:hover {
-  background: #111;
+  background: #c0bfbd;
 }
 
 .box:hover .overlay {
@@ -127,7 +127,7 @@ header h1 {
 .box h2 {
   z-index: 2;
   font-size: 1.5em;
-  color: var(--platinum);
+  color: var(--black);
 }
 
   </style>
