--- a/index.html
+++ b/index.html
@@ -8,7 +8,14 @@
   <style>
     :root {
       --black: #000;
-    }body {
+    }
+    
+  header img {
+  width: 150px;
+  height: auto;
+}    
+  
+  body {
   margin: 0;
   background-color: #e5e4e2;
   color: var(--black);
@@ -16,6 +23,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+    
 }
 
 header {
