--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@ header h1 {
   left: -100%;
   width: 100%;
   height: 100%;
-  background: #c0bfbd;
+  background: rgba(192, 191, 189, 0.4);
   animation: shine 2s linear infinite;
 }
 
